RESOLVED FIXED6040
XSLT does not report errors to the user
https://bugs.webkit.org/show_bug.cgi?id=6040
Summary XSLT does not report errors to the user
Eric Seidel (no email)
Reported 2005-12-11 02:50:52 PST
XSLT does not report errors to the user See parseErrorFunc in XSLTProcessorImpl.* I just added two testcases to catch this: fast/xsl/xslt-mismatched-tags-in-xslt.xml (currently produces blank output) fast/xsl/xslt-missing-namespace-in-xslt.xml (currently parses result as html when it shouldn't)
Attachments
proposed fix (21.11 KB, patch)
2007-10-29 09:33 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-10-29 09:33:09 PDT
Created attachment 16936 [details] proposed fix
Darin Adler
Comment 2 2007-10-29 09:53:33 PDT
Comment on attachment 16936 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2007-10-29 10:14:07 PDT
Committed revision 27227.
Alexey Proskuryakov
Comment 4 2007-10-29 10:17:51 PDT
NB: this patch sends errors to Web Inspector console.
Eric Seidel (no email)
Comment 5 2007-10-29 10:37:08 PDT
This fix (wonderful as it is!) does not actually solve the issue this bug was originally about... so I've filed bug 15751. The fact that this change doesn't affect any tests concerns me. I really think we should add a test case to demonstrate XSLTProcessor writing to the console.
Note You need to log in before you can comment on or make changes to this bug.